--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,12 @@
 
     <body id="main">
         <div class="container-fluid">
-            <app-header></app-header>
+            <app-header [nombreUsuario]="getName()" (cerrarSesion)="logout()"></app-header>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-2">
-                    <app-navbar [nombreUsuario]="getName()" (cerrarSesion)="logout()"></app-navbar>
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                    <app-navbar></app-navbar>
                 </div>
-                <div class="col-xs-6 col-md-10">
+                <div class="col-xs-12 col-sm-12 col-md-12">
                     <router-outlet></router-outlet>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                             </div>
                             <div class="role">
                                 <div class="block"></div>
-                                <p>S I E R</p>
+                                <p>REVECO</p>
                             </div>
                         </div>
                     </div>
@@ -56,11 +56,11 @@
     </body>
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-12" class="text-center">
-            <button mat-raised-button color="primary" (click)="login() " *ngIf="!isLoggedIn()">Iniciar Sesión</button>
+            <button class="btnInicio" mat-raised-button color="primary" (click)="login() " *ngIf="!isLoggedIn()">Iniciar
+                Sesión</button>
             <!-- <button type="button" class="btn btn-light" (click)="logout() " *ngIf="isLoggedIn() ">Cerrar Sesión</button>
-    <td><a [routerLink]="[ '/public-page'] " routerLinkActive="true ">[PUBLIC-PAGE]</a></td>
-    <td><a [routerLink]="[ '/restricted-page'] " routerLinkActive="true " *ngIf="isLoggedIn() ">[RESTRICTED-PAGE]</a></td> -->
-
+                    <td><a [routerLink]="[ '/public-page'] " routerLinkActive="true ">[PUBLIC-PAGE]</a></td>
+                    <td><a [routerLink]="[ '/restricted-page'] " routerLinkActive="true " *ngIf="isLoggedIn() ">[RESTRICTED-PAGE]</a></td> -->
 
         </div>
     </div>
