--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,7 @@
 #sideheader {
     box-shadow: -1px 1px 7px 0px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
+    width: auto;
 }
