--- a/src/styles.css
+++ b/src/styles.css
@@ -93,7 +93,7 @@ body {
 .container .box .title .block {
     width: 0%;
     height: inherit;
-    background: #ffb510;
+    background: #c42847;
     position: absolute;
     animation: mainBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
     display: flex;
@@ -101,7 +101,8 @@ body {
 
 .container .box .title h1 {
     font-family: 'Poppins';
-    color: rgb(65, 64, 88);
+    font-weight: 600;
+    color: rgb(179, 40, 45);
     font-size: 70px;
     -webkit-animation: mainFadeIn 2s forwards;
     -o-animation: mainFadeIn 2s forwards;
@@ -119,7 +120,7 @@ body {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    background: #ffb510;
+    background: #c42847;
     -webkit-animation: load 0.6s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
     animation: popIn 0.8s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
     animation-delay: 2s;
@@ -142,7 +143,7 @@ body {
 .container .box .role .block {
     width: 0%;
     height: inherit;
-    background: #e91e63;
+    background: #1098F7;
     position: absolute;
     animation: secBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
     animation-delay: 2s;
@@ -154,9 +155,9 @@ body {
     animation-delay: 3.2s;
     opacity: 5;
     font-weight: 800;
-    font-family: 'Lato';
-    color: #fc0000;
-    font-size: 20px;
+    font-family: 'Montserrat';
+    color: #1098F7;
+    font-size: 40px;
     text-transform: uppercase;
     letter-spacing: 5px;
 }
