20.-Modulo 2022, Fecha corta

--- a/src/app/components/carpetas2019/carpetas2019.component.html
+++ b/src/app/components/carpetas2019/carpetas2019.component.html
@@ -23,12 +23,12 @@
                         <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                     </th>
 
-                    <th>
+                    <!--    <th>
                         <div class="p-d-flex p-jc-between p-ai-center">
                             Id Row
                             <p-columnFilter type="number" field="idRow" display="menu"></p-columnFilter>
                         </div>
-                    </th>
+                    </th> -->
 
                     <th>
                         <div class="p-d-flex p-jc-between p-ai-center">
@@ -91,7 +91,7 @@
                     <td>
                         <p-tableCheckbox [value]="carpeta"></p-tableCheckbox>
                     </td>
-                    <td>{{carpeta.idRow}}</td>
+                    <!-- <td>{{carpeta.idRow}}</td> -->
                     <td>{{carpeta.NumCar}}</td>
                     <td>{{carpeta.FechaCI}}</td>
                     <td>{{carpeta.EdoJur}}</td>
