--- a/src/app/components/reportes-power-bi/reportes-power-bi.component.html
+++ b/src/app/components/reportes-power-bi/reportes-power-bi.component.html
@@ -1,5 +1,5 @@
-<div class="col-xs-12 col-sm-12 col-md-12" style="margin-top: 0.3rem;">
-    <iframe title="Indicadores - RESUMEN" width="1325" height="768" src="https://app.powerbi.com/reportEmbed?reportId=535e6250-830d-4471-9870-45086d9510de&groupId=ebbd47cc-fabd-4063-946f-97f0fecd8df4&autoAuth=true&ctid=c7f97587-99da-40a0-871a-1a8829a53808&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWNlbnRyYWwtdXMtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D"
+<div class="col-xs-13 col-sm-13 col-md-13 row justify-content-center align-items-center" style="margin-top: 0.3rem;">
+    <iframe title="Indicadores - RESUMEN" width="1366" height="768" src="https://app.powerbi.com/reportEmbed?reportId=535e6250-830d-4471-9870-45086d9510de&groupId=ebbd47cc-fabd-4063-946f-97f0fecd8df4&autoAuth=true&ctid=c7f97587-99da-40a0-871a-1a8829a53808&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWNlbnRyYWwtdXMtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D"
         frameborder="0" allowFullScreen="true">
     </iframe>
 </div>
