--- a/src/app/components/cmi/cmi.component.html
+++ b/src/app/components/cmi/cmi.component.html
@@ -7,7 +7,7 @@
                     <mat-option value=1>COPLADII_CENAPI</mat-option>
                     <mat-option value=2>COPLADII_CGSP</mat-option>
                     <mat-option value=3>COPLADII_PFM_MM</mat-option>
-                    <!-- <mat-option value=4>COPLADII_PFM_MJ</mat-option> -->
+                    <mat-option value=4>COPLADII_PFM_MJ</mat-option>
                 </mat-select>
             </mat-form-field>
 
@@ -20,7 +20,7 @@
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
             </mat-form-field>
-            <button class="btn btn-primary" type="submit" [disabled]="!cmi.valid" style="margin-left: 5rem;">Buscar Registros</button>
+            <button class="btn btn-primary" type="submit" [disabled]="!cmi.valid" style="margin-left: 5rem;">Descargar Registros</button>
         </form>
     </div>
 </div>
