28.-Permisos de Usuario OK

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
                 </div>
             </div>
         </div>
+        <button>usuario Logueado</button>
 
         <!--         <button (click)="callProfile()">Profile</button>
 
