--- a/src/app/components/fecor/fecor.component.html
+++ b/src/app/components/fecor/fecor.component.html
@@ -43,7 +43,7 @@
             </mat-form-field>
 
             <button class="btn btn-primary" type="submit" [disabled]="!numeroCarpeta.valid" style="margin-left: 5rem;">Buscar Plan</button>
-            <button [hidden]="!numeroCarpeta.valid" class="btn btn-success" type="submit" style="margin-left: 3rem;" (click)="generatePDF()">Generar PDF</button>
+            <button mat-raised-button [hidden]="!numeroCarpeta.valid" color="accent" type="submit" style="margin-left: 3rem;" (click)="generatePDF()">Generar PDF</button>
             <strong>
                 <h2>Número de carpeta a buscar: {{selectedTipo}} / {{selectedEDO}} / {{selectedUnidad}} / {{numCar}} /
                     {{anio}}
