--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
             <div id="profile" class="text-center">
                 <div id="name">
                     <h3>{{nombreUsuario}}</h3>
-                    <button type="button" class="btn btn-danger" (click)="logout()">Cerrar Sesión</button>
+                    <button type="button" class="btn btn-secondary" (click)="logout()">Cerrar Sesión</button>
                 </div>
             </div>
         </div>
