--- a/src/app/components/pfmviews/pfmviews.component.html
+++ b/src/app/components/pfmviews/pfmviews.component.html
@@ -63,7 +63,53 @@
         <h1 style="height: 3.5rem; color: yellow; ">En la Base de Datos ...</h1>
     </ngx-spinner>
 
+    <mat-toolbar color="accent" style="box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12); margin-top: .5rem; ">
+        <div align="center" style="text-align: right; margin-right: auto;">
+            <h1>Registros Actuales En la Base de Datos</h1>
+        </div>
+        &nbsp;
+        <mat-form-field style="margin-left: auto;">
+            <input matInput (keyup)="applyFilter($event)" placeholder="Buscar">
+        </mat-form-field>
+    </mat-toolbar>
+
+    <table mat-table [dataSource]="dataSource" matSort>
+
+        <ng-container matColumnDef="Nombrefuente">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Fuente</th>
+            <td mat-cell *matCellDef="let element"> {{element.Nombrefuente}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Periodicidad">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Periodicidad</th>
+            <td mat-cell *matCellDef="let element"> {{element.Periodicidad}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="TotalRegistros">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Registros
+                <th>
+                    <td mat-cell *matCellDef="let element"> {{element.TotalRegistros}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Validado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Validado</th>
+            <td mat-cell *matCellDef="let element"> {{element.Validado }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Fecha">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha</th>
+            <td mat-cell *matCellDef="let element"> {{element.Fecha }} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[8, 16, 32]"></mat-paginator>
+
 </div>
+
 
 <!-- <div class="fade-in-logo" style="margin-top: 1rem; opacity: .9;">
     <mat-toolbar color="accent" style="box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);">
