--- a/src/app/components/resumen-cmi/resumen-cmi.component.html
+++ b/src/app/components/resumen-cmi/resumen-cmi.component.html
@@ -40,7 +40,7 @@
         </ng-container>
 
         <ng-container matColumnDef="TMes1">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Resultado 1er. Mes </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total 1er. Mes </th>
             <td mat-cell *matCellDef="let element"> {{element.TMes1}} </td>
         </ng-container>
 
@@ -50,7 +50,7 @@
         </ng-container>
 
         <ng-container matColumnDef="TMes2">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Resultado 2do. Mes </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total 2do. Mes </th>
             <td mat-cell *matCellDef="let element"> {{element.TMes2}} </td>
         </ng-container>
 
@@ -60,8 +60,8 @@
         </ng-container>
 
         <ng-container matColumnDef="TMes3">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Resultado 3er. Mes </th>
-            <td mat-cell *matCellDef="let element"> {{element.Num}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total 3er. Mes </th>
+            <td mat-cell *matCellDef="let element"> {{element.TMes3}} </td>
         </ng-container>
 
         <ng-container matColumnDef="Total">
@@ -122,14 +122,24 @@
             <td mat-cell *matCellDef="let element"> {{element.Fecha_Fin}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="Total">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total</th>
+            <td mat-cell *matCellDef="let element"> {{element.Total}} </td>
+        </ng-container>
+
         <ng-container matColumnDef="Error_Datos">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Error de Datos </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Campos con Errores </th>
             <td mat-cell *matCellDef="let element"> {{element.Error_Datos}} </td>
         </ng-container>
 
         <ng-container matColumnDef="Campos_null">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Campos Null </th>
             <td mat-cell *matCellDef="let element"> {{element.Campos_null}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Total_Incidencias">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Incidencias </th>
+            <td mat-cell *matCellDef="let element"> {{element.Total_Incidencias}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumsErrors"></tr>
