--- a/src/app/components/cmi/cmi.component.html
+++ b/src/app/components/cmi/cmi.component.html
@@ -29,7 +29,8 @@
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
             </mat-form-field>
-            <button class="btn btn-primary" type="submit" [disabled]="!cmi.valid" style="margin-left: 5rem;">Descargar Registros</button>
+            <button class="btn btn-primary" type="submit" [disabled]="!cmi.valid" style="margin-left: 5rem;">Descargar
+                Registros</button>
         </form>
         <ngx-spinner type="ball-scale-multiple">
             <h2 style="height: 1.5rem; color: yellow; ">Generando Reporte</h2>
