--- a/src/app/components/administrativo/administrativo.component.html
+++ b/src/app/components/administrativo/administrativo.component.html
@@ -9,79 +9,151 @@
             <input matInput (keyup)="applyFilter($event)" placeholder="Buscar">
         </mat-form-field>
     </mat-toolbar>
+    <!-- Stepper -->
 
-    <div id="htmlData" class="card fade-in-logo" style="margin-top: .5rem; opacity: .8;">
+    <mat-stepper #stepper [linear]="isLinear">
 
-        <div class="row col-xs-12 col-sm-12 col-md-12" style="margin-top: 1rem; margin-left: 5px;">
-            <form [formGroup]="vacaciones" novalidate (ngSubmit)="insertDataUser()" #f="ngForm">
-
-                <!-- Año -->
-                <mat-form-field appearance="fill" style="margin-left: 2rem ;">
+        <!-- Año -->
+        <mat-step [stepControl]="anioFormGroup" errorMessage="Campo Requerido">
+            <form [formGroup]="anioFormGroup">
+                <ng-template matStepLabel>Selecciona el año</ng-template>
+                <mat-form-field appearance="fill">
                     <mat-label>Año</mat-label>
                     <mat-select [(value)]="selectedAnio" id="anio" formControlName="anio" required>
                         <mat-option value="2022">2022</mat-option>
                         <mat-option value="2023">2023</mat-option>
+                        <mat-option value="2024">2024</mat-option>
+                        <mat-option value="2025">2025</mat-option>
                     </mat-select>
                 </mat-form-field>
+                <div>
+                    <p>Selecciona para avanzar</p>
+                    <button style="margin-left: .5rem;" mat-raised-button color="accent" mat-button matStepperNext>Siguiente</button>
+                </div>
+            </form>
+        </mat-step>
 
-                <!-- Periodo -->
-                <mat-form-field appearance="fill" style="margin-left: 2rem ;">
+        <!-- Periodo -->
+        <mat-step [stepControl]="periodoFormGroup" errorMessage="Campo Requerido">
+            <form [formGroup]="periodoFormGroup">
+                <ng-template matStepLabel>Selecciona el Periodo</ng-template>
+                <mat-form-field appearance="fill">
                     <mat-label>Periodo</mat-label>
                     <mat-select [(value)]="selectedPeriodo" id="periodo" formControlName="periodo" required>
                         <mat-option value="1">1er.</mat-option>
                         <mat-option value="2">2do.</mat-option>
                     </mat-select>
                 </mat-form-field>
+                <div>
+                    <p>Selecciona para avanzar</p>
+                    <button style="margin-left: .5rem;" mat-raised-button color="primary" mat-button matStepperPrevious>Regresar</button>
+                    <button style="margin-left: .5rem;" mat-raised-button color="accent" mat-button matStepperNext>Siguiente</button>
+                </div>
+            </form>
+        </mat-step>
 
-                <!-- DatePicker -->
-                <mat-form-field appearance="fill" style="margin-left: 2rem ;">
-                    <mat-label>Selecciona el Día</mat-label>
-                    <input matInput [matDatepickerFilter]="dateFilter" [min]="minDate" [matDatepicker]="picker" id="fechaIni" formControlName="fechaIni" required>
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker startView="year"></mat-datepicker>
-                </mat-form-field>
+        <!-- Fecha Inicio -->
+        <mat-step [stepControl]="rangoFormGroup1" errorMessage="Campo Requerido">
+            <form [formGroup]="rangoFormGroup1">
 
-                <!-- Comentarios -->
-                <mat-form-field appearance="fill" style="margin-left: 2rem ;">
-                    <mat-label>Comentarios</mat-label>
-                    <input matInput [(ngModel)]="selectedComentario" id="descripcion" formControlName="descripcion">
-                </mat-form-field>
+                <div *ngIf="periodoFormGroup.value.periodo == 1">
+                    <ng-template matStepLabel>Selecciona el Primer Periodo</ng-template>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Fecha Inicio</mat-label>
+                        <input matInput [matDatepicker]="picker" [max]="maxDate" [min]="minDate" formControlName="start" name="start" id="start">
+                        <mat-hint>MM/DD/YYYY</mat-hint>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                </div>
 
-                <button class="btn btn-primary" [disabled]="!vacaciones.valid" type="submit" style="margin-left: 5rem; ">Registrar Día</button>
+                <div *ngIf="periodoFormGroup.value.periodo == 2">
+                    <ng-template matStepLabel>Selecciona el Segundo Periodo</ng-template>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Fecha Inicio</mat-label>
+                        <input matInput [matDatepicker]="picker" [max]="maxDate2" [min]="minDate2" formControlName="start" name="start" id="start">
+                        <mat-hint>MM/DD/YYYY</mat-hint>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                </div>
+
+                <div>
+                    <p>Selecciona para avanzar</p>
+                    <button style="margin-left: .5rem;" mat-raised-button color="primary" mat-button matStepperPrevious>Regresar</button>
+                    <button style="margin-left: .5rem;" mat-raised-button color="accent" mat-button matStepperNext>Siguiente</button>
+                </div>
 
             </form>
-        </div>
+        </mat-step>
 
-    </div>
+        <!-- Fecha Fin -->
+        <mat-step [stepControl]="rangoFormGroup2" errorMessage="Campo Requerido">
+            <form [formGroup]="rangoFormGroup2">
 
+                <div *ngIf="periodoFormGroup.value.periodo == 1">
+                    <ng-template matStepLabel>Selecciona el Primer Periodo</ng-template>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Fecha Final</mat-label>
+                        <input matInput [matDatepicker]="picker" [max]="maxDate" [min]="minDate" formControlName="end" name="end" id="end">
+                        <mat-hint>MM/DD/YYYY</mat-hint>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                </div>
+
+                <div *ngIf="periodoFormGroup.value.periodo == 2">
+                    <ng-template matStepLabel>Selecciona el Segundo Periodo</ng-template>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Fecha Final</mat-label>
+                        <input matInput [matDatepicker]="picker" [max]="maxDate2" [min]="minDate2" formControlName="end" name="end" id="end">
+                        <mat-hint>MM/DD/YYYY</mat-hint>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                </div>
+
+                <div>
+                    <p>Selecciona para avanzar</p>
+                    <button style="margin-left: .5rem;" mat-raised-button color="primary" mat-button matStepperPrevious>Regresar</button>
+                    <button style="margin-left: .5rem;" mat-raised-button color="accent" mat-button matStepperNext>Siguiente</button>
+                </div>
+
+            </form>
+        </mat-step>
+
+        <!-- Enviar -->
+        <mat-step>
+            <ng-template matStepLabel #adios>Completado</ng-template>
+            <h1>Enviar Datos... ¡¡¡</h1>
+            <div>
+                <button style="margin-left: .5rem;" mat-raised-button color="accent" (click)="stepper.reset()">Reiniciar</button>
+                <button style="margin-left: .5rem;" class="btn btn-success" (click)="insertDataUser()">Enviar</button>
+            </div>
+        </mat-step>
+    </mat-stepper>
 
     <!-- Tabla de Vacaciones -->
     <div class="row col-xs-12 col-sm-12 col-md-12" style="margin-top: .5rem; margin-left: 2px;">
 
-        <table mat-table [dataSource]="dataSource" matSort>
+        <table mat-table [dataSource]="dataSourceTable" matSort>
 
             <!-- Fecha Solicitada Column -->
             <ng-container matColumnDef="fecIni">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha Solicitada</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha Inicio</th>
                 <td mat-cell *matCellDef="let element"> {{element.fecIni}} </td>
             </ng-container>
 
             <!-- estatus Column -->
-            <ng-container matColumnDef="estatusReg">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Autorizada </th>
-                <td mat-cell *matCellDef="let element"> {{element.estatusReg}} </td>
+            <ng-container matColumnDef="fecFin">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha Término</th>
+                <td mat-cell *matCellDef="let element"> {{element.fecFin}} </td>
             </ng-container>
 
             <!-- Fecha de registro Column -->
             <ng-container matColumnDef="fecRegistro">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Solicitud</th>
                 <td mat-cell *matCellDef="let element"> {{element.fecRegistro}} </td>
-            </ng-container>
-
-            <!-- Observaciones Column -->
-            <ng-container matColumnDef="descripcion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Observaciones </th>
-                <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
             </ng-container>
 
             <!-- Periodo Column -->
@@ -94,6 +166,13 @@
             <ng-container matColumnDef="anio">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Año</th>
                 <td mat-cell *matCellDef="let element"> {{element.anio}} </td>
+            </ng-container>
+
+
+            <!-- Observaciones Column -->
+            <ng-container matColumnDef="descripcion">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Observaciones </th>
+                <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
             </ng-container>
 
             <!-- Correo Column -->
@@ -119,8 +198,8 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
                 <mat-cell *matCellDef="let element">
                     <button style="margin-right: 1rem;" mat-icon-button aria-label="Example icon button with a delete icon" type="button" mat-raised-button color="accent" matTooltip="Delete" (click)="deleteRegistro(element.id)">
-                    <mat-icon>delete_forever</mat-icon>
-                </button>
+                        <mat-icon>delete_forever</mat-icon>
+                    </button>
                 </mat-cell>
             </ng-container>
 
@@ -138,8 +217,12 @@
 
 <!-- Grafica -->
 
-
 <div class="container" style="margin-top: .5rem; ">
 </div>
-<fusioncharts style="margin-right: auto;opacity: .9;" type="gantt" width="100%" height="75%" dataFormat="json" [dataSource]="dataSourceChart">
+<fusioncharts style="margin-right: auto;opacity: .9;" type="gantt" width="100%" height="550" dataFormat="json" [dataSource]="dataSourceChart">
 </fusioncharts>
+
+<ngx-spinner type="ball-scale-multiple">
+    <h1></h1>
+    <h1 style="height: 3.5rem; color: yellow; ">Cargando...</h1>
+</ngx-spinner>
