--- a/src/app/components/cmi/cmi.component.css
+++ b/src/app/components/cmi/cmi.component.css
@@ -1,3 +1,11 @@
 ul {
     text-align: center;
 }
+
+.mat-stepper-horizontal {
+    margin-top: 8px;
+}
+
+.mat-form-field {
+    margin-top: 16px;
+}
