--- a/src/app/components/administrativo/administrativo.component.html
+++ b/src/app/components/administrativo/administrativo.component.html
@@ -200,6 +200,10 @@
                     <button style="margin-right: 1rem;" mat-icon-button aria-label="Example icon button with a delete icon" type="button" mat-raised-button color="accent" matTooltip="Delete" (click)="deleteRegistro(element.id)">
                         <mat-icon>delete_forever</mat-icon>
                     </button>
+
+                    <button style="margin-right: 1rem;" mat-icon-button aria-label="Example icon button with a delete icon" type="button" mat-raised-button color="accent" matTooltip="Delete" (click)="exportFormato(element.id)">
+                        <mat-icon>download</mat-icon>
+                    </button>
                 </mat-cell>
             </ng-container>
 
@@ -217,10 +221,19 @@
 
 <!-- Grafica -->
 
-<div class="container" style="margin-top: .5rem; ">
-</div>
+
+<mat-toolbar color="accent" style="box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12); margin-top: .5rem;">
+    <div align="center" style="text-align: right; margin-right: auto">
+        <h1><strong>Plan Vacacional</strong></h1>
+    </div>
+    <div>
+        <button (click)="exportChart($event)" class="btn btn-primary fade-in-logo">Descargar Sección Gráfica</button>
+    </div>
+</mat-toolbar>
+
 <fusioncharts style="margin-right: auto;opacity: .9;" type="gantt" width="100%" height="550" dataFormat="json" [dataSource]="dataSourceChart">
 </fusioncharts>
+
 
 <ngx-spinner type="ball-scale-multiple">
     <h1></h1>
